--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.4.3",
     "react-redux": "^9.1.0",
-    "react-router-dom": "^6.10.0",
+    "react-router-dom": "^6.25.1",
     "redux-thunk": "^3.1.0",
     "typescript": "^5.3.3",
     "uuid": "^9.0.0",
@@ -33,6 +33,7 @@
     "@babel/preset-env": "^7.23.6",
     "@babel/preset-react": "^7.23.3",
     "@babel/preset-typescript": "^7.23.3",
+    "@jest/globals": "^29.7.0",
     "@storybook/addon-essentials": "^7.6.10",
     "@storybook/addon-interactions": "^7.6.10",
     "@storybook/addon-links": "^7.6.10",
@@ -43,6 +44,7 @@
     "@storybook/test": "^7.6.10",
     "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.1",
+    "@types/cypress": "^0.1.6",
     "@types/jest": "^29.5.11",
     "@types/node": "^20.10.5",
     "@types/react": "^18.2.45",
@@ -53,8 +55,9 @@
     "@typescript-eslint/parser": "^6.15.0",
     "babel-jest": "^29.7.0",
     "babel-loader": "^9.1.3",
+    "concurrently": "^8.2.2",
     "css-loader": "^6.8.1",
-    "cypress": "^13.6.1",
+    "cypress": "^13.13.3",
     "dotenv-webpack": "^8.0.1",
     "eslint": "^8.56.0",
     "eslint-config-airbnb": "^19.0.4",
@@ -73,25 +76,30 @@
     "jest-css-modules-transform": "^4.4.2",
     "jest-environment-jsdom": "^29.7.0",
     "jsdom": "^23.0.1",
-    "prettier": "^3.1.1",
+    "prettier": "^3.3.3",
     "prettier-eslint": "^16.2.0",
     "prettier-eslint-cli": "^8.0.1",
     "react-test-renderer": "^18.2.0",
     "storybook": "^7.6.10",
     "storybook-addon-react-router-v6": "^2.0.10",
     "style-loader": "^3.3.3",
-    "ts-jest": "^29.1.1",
+    "ts-jest": "^29.2.5",
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
     "url-loader": "^4.1.1"
   },
   "scripts": {
-    "start": "webpack serve --mode=development",
+    "start": "webpack serve --mode=development --open",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
     "lint": "eslint --ext .js,.jsx,.ts,.tsx ./src",
     "lint:fix": "npm run lint -- --fix",
-    "format": "prettier ./src --write"
+    "format": "prettier ./src --write",
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run",
+    "test:open": "concurrently \"npm start\" \"npm run cypress:open\"",
+    "test:run": "concurrently \"npm start\" \"npm run cypress:run\"",
+    "test": "jest"
   },
   "eslintConfig": {
     "extends": [
